tests/files/parser_tests/should_fail/123.cmdr
//Should not parse
x: (int) -> = (a) -> 3.0;